more 	#header #right form{ 		padding-top: 6px; 		float:right; 	}
git-svn-id: svn://109.123.66.160/home/vnwkrepos/trunk@17 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -424,12 +424,9 @@ body{
 		width:500px;
 	}
 	
-	#header #right {
+	#header #right form{
 		padding-top: 6px;
-		_padding-bottom:0;
 		float:right;
-		_height:0;
-		_clear:both;
 	}
 
 #toolbar{
