--- a/css/integrated.css
+++ b/css/integrated.css
@@ -398,7 +398,7 @@ img.center, dl.boxes dd img, .t_cond .c1 img, .t_longfore img, .t_half img {
 /* MAIN SITE */
 body{
 	color: black;
-	background: #830003 url(css/images/bg/bg.gif) repeat-y scroll center center;
+	background: #830003 url(/css/images/bg/bg.gif) repeat-y scroll center center;
 	font-family: Arial,Helvetica,serif;
 	font-size: 12px;
 	margin: 0 0;
