//Hoi an (general) bo align left trong db cho bang Table de ko bi be layout //review(star ko xuat hien) tai the div class=reviewRate trong getReviewListHTML trong APIs.php them vao khoang trang
&nbsp; vi FF bo wa neu giua the div khong co j. 
//IE phan search bi be (Da Nang) trong sbody.php chen the <div style="clear:left"> tu cho hinh anh den noi dung de ko bi 

be layout, Them vao trong inegrate #width:180px tai table.leftmenu, de IE xuat hien destination cho dung. Su dung 100% khi dinh dang body se hay hon

git-svn-id: svn://localhost/home/vnwkrepos/trunk@42 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -825,21 +825,26 @@ td.left {
 	width : 180px;
 	vertical-align: top;
 	border-right: 1px solid #C8C8C8;
+	#width:180px;
 }
 td.center {
 	width : 620px;
 	vertical-align: top;
+	#width:620px;
 }
 
 table.leftmenu{
 	width: 100%;
 	background-color: white;
 	border: 0px;
+	#width: 180px;
 }
 
 table.main {
 	width: 800px;
-	border-bottom: 1px solid #C8C8C8; 	
+	border-bottom: 1px solid #C8C8C8;
+	clear:both;
+	#width: 800px;
 	clear:both;
 }
 
