--- a/trunk/vnwk-admin/admin.css
+++ b/trunk/vnwk-admin/admin.css
@@ -11,6 +11,10 @@ a:hover{
 	color:#440000;
 }
 
+h3 {
+	color: #888888;
+	}
+
 #link p{
 	background: #DDDDDD;
 	text-align: center;
@@ -43,12 +47,10 @@ a:hover{
 #map{
 	color:#000000;
 	font-size:16px;
-	font-weight:bold;
 }
 #map h3{
 	font-size:20px;
 	font-weight:bold;
-	color:#FFFF00;
 }
 #man_user{
 	color:#000000;
@@ -56,7 +58,6 @@ a:hover{
 }
 #man_user h3{
 	font-size:20px;
-	color:#FFFF00;
 }
 #e_user{
 	color:#000000;
@@ -64,7 +65,6 @@ a:hover{
 }
 #e_user h3{
 	font-size:20px;
-	color:#FFFF00;
 }
 #edition_manage{
 	color:#000000;
@@ -72,7 +72,6 @@ a:hover{
 }
 #edition_manage h3{
 	font-size:20px;
-	color:#FFFF00;
 }
 #e_edition{
 	color:#000000;
