--- a/css/integrated.css
+++ b/css/integrated.css
@@ -335,6 +335,10 @@ img.center, dl.boxes dd img, .t_cond .c1 img, .t_longfore img, .t_half img {
 	background: #fff url(loading.gif) no-repeat center;
 }
 
+.refList {
+	font-size: 10px;
+	}
+
 #lbImage {
 	position: absolute;
 	left: 0;
