--- a/trunk/js/tiny_mce/themes/advanced/skins/default/content.css
+++ b/trunk/js/tiny_mce/themes/advanced/skins/default/content.css
@@ -17,7 +17,9 @@ ins {border-bottom:1px solid green; text-decoration: none; color:green}
 del {color:red; text-decoration:line-through}
 cite {border-bottom:1px dashed blue}
 acronym {border-bottom:1px dotted #CCC; cursor:help}
+div.map {background-color: #F0F0F0; overflow: hidden; border: 1px solid #DDDDDD;}
 abbr, html\:abbr {border-bottom:1px dashed #CCC; cursor:help}
+
 
 /* IE */
 * html body {
