Add MapSpot.php and automatically extract map spots in posts
git-svn-id: svn://109.123.66.160/home/vnwkrepos/trunk@168 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -741,6 +741,12 @@ div.image_edit {
 	background-color: white;
 }
 
+div.map {
+	background-color: #F0F0F0;
+	border: 1px solid #DDDDDD;
+	overflow: hidden;
+	}
+
 a.small_link {
 	font-size: 11px; 
 	font-weight: bold;
