git-svn-id: svn://localhost/home/vnwkrepos/trunk@171 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -745,6 +745,7 @@ div.map {
 	background-color: #F0F0F0;
 	border: 1px solid #DDDDDD;
 	overflow: hidden;
+	margin-left: 50px;
 	}
 
 a.small_link {
