--- a/css/integrated.css
+++ b/css/integrated.css
@@ -909,7 +909,7 @@ table.leftmenu{
 table.main {
 	width: 806px;
 	clear: both;
-	margin-bottom: 50px;
+	/*margin-bottom: 50px;*/
 	background: #FFF;
 	-moz-box-shadow: 0px 6px 10px #AAA;
 	-webkit-box-shadow: 0px 6px 10px #AAA;
