git-svn-id: svn://localhost/home/vnwkrepos/trunk@278 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -1640,7 +1640,7 @@ div.demo-description {
 #reviewLowerBound,#FillEmailDialog,#commentDialog,#EmailComment1,#editloginDialog,#confirm,#deleteConfirmDialog{
 	visibility:hidden;
 }
-#restoreConfirmDialog,#rej_confirm,#sendmail,#photoUploadDialog,.index_des{
+#restoreConfirmDialog,#rej_confirm,#sendmail,#photoUploadDialog,.index_des,#questionDialog,#Emailquestion1,#answerDialog,#Emailanswer1{
 	visibility:hidden;
 }
 .des{
