--- a/trunk/css/integrated.css
+++ b/trunk/css/integrated.css
@@ -1640,7 +1640,7 @@ div.demo-description {
 #reviewLowerBound,#FillEmailDialog,#commentDialog,#EmailComment1,#editloginDialog,#confirm,#deleteConfirmDialog{
 	visibility:hidden;
 }
-#restoreConfirmDialog,#rej_confirm,#sendmail,#photoUploadDialog,.index_des{
+#restoreConfirmDialog,#rej_confirm,#sendmail,#photoUploadDialog,.index_des,#questionDialog,#Emailquestion1,#answerDialog,#Emailanswer1{
 	visibility:hidden;
 }
 .des{
