--- a/trunk/css/integrated.css
+++ b/trunk/css/integrated.css
@@ -1266,17 +1266,22 @@ div.demo-description {
 	margin:0px;
 	padding:0px;
 }
-#qanda{
+
+#qanda{
     width: 180px;
     float: left;
     font-family:Arial,Helvetica,serif;
     font-size: 12px;
+    
 }
 #qanda ul{
     list-style: none;
     margin: 0px;
     padding: 0px;
     list-style-position: outside;
+}
+#qanda ul li{
+    padding-top: 10px
 }
 #qanda ul li ul{
     margin-left: 30px;
@@ -1285,10 +1290,14 @@ div.demo-description {
     margin-bottom: 10px;
 }
 .question{
-    float: left;
+    text-align: left;
     width: 180px;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 #qanda img{
     padding: 3px 2px 2px 0px;
+}
+#view_qanda{
+    overflow: inherit;
 }
